Minor updates to commenting and code + change of syntax and addition of placeholders

--- a/_flag.scss
+++ b/_flag.scss
@@ -9,80 +9,93 @@ $flag-pattern-reversed-enable: true !default;
 // Core Flag Pattern Styling
 // =============================
 
-// The flag pattern similar is to the media pattern, however it utilises 
+//
+// The flag pattern similar is to the media pattern, however it utilises
 // `display: table[-cell];` to give us control over the vertical
-// alignments of the text and image. csswizardry.com/2013/05/the-flag-object
-
+// alignments of the text and image.
+// Find out more information regarding this pattern: http://www.csswizardry.com/2013/05/the-flag-object
 //
 // Flag Pattern Default.
+//
 // Note - Reversed Version is the diagram below but the elements are in opposite positions.
-// 
+//
 //    Flag Sidebar               Flag Body
 //
-//                   ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-//                   ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~   
-//    ~ ~ ~ ~ ~ ~    ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
-//    ~         ~    ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-//    ~         ~    ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-//    ~         ~    ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~    
-//    ~ ~ ~ ~ ~ ~    ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-//                   ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-//                   ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//                          ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//                          ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//    ~ ~ ~ ~ ~ ~           ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//    ~         ~           ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//    ~         ~           ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//    ~         ~           ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//    ~ ~ ~ ~ ~ ~           ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//                          ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//                          ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
 //
-
+//
 //
 // Flag Pattern Bottom Modifier.
+//
 // Note - Reversed Version is the diagram below but the elements are in opposite positions.
 //
-//    Flag Sidebar              Flag Body                     
+//    Flag Sidebar              Flag Body
 //
-//                   ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-//                   ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-//    ~ ~ ~ ~ ~ ~    ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
-//    ~         ~    ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-//    ~         ~    ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-//    ~         ~    ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~    
-//    ~ ~ ~ ~ ~ ~    ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-//   
+//                          ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//                          ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//    ~ ~ ~ ~ ~ ~           ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//    ~         ~           ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//    ~         ~           ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//    ~         ~           ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//    ~ ~ ~ ~ ~ ~           ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
+//
 
 @if ($flag-pattern-enable) {
-    .flag {
-        @extend [class~="span-1x"];
-        display: table;
+
+    .flag,
+    %flag {
+      display: table;
+
+      // .flag__sidebar
+      // .flag__body
+      // .flag__sidebar--bottom
+      // .flag__body--bottom
+
+      &__sidebar,
+      &__body,
+      &__sidebar--bottom,
+      &__body--bottom {
+        display: table-cell;
+      }
+
+      // .flag__sidebar
+      // .flag__body
+
+      &__sidebar,
+      &__body {
+          vertical-align: middle;
+      }
+
+      // .flag__sidebar--bottom
+      // .flag__body--bottom
+
+      &__sidebar--bottom,
+      &__body--bottom {
+          vertical-align: bottom;
+      }
+
     }
-        
-        .flag__sidebar,
-        .flag__body,
-        .flag__sidebar--bottom,
-        .flag__body--bottom {
-            display: table-cell;
-        }
 
-        .flag__sidebar,
-        .flag__body {
-            vertical-align: middle;
-        }
+    [class*="flag__sidebar"] img {
+        display: block;
+        max-width: none;
+    }
 
-        .flag__sidebar--bottom,
-        .flag__body--bottom {
-            vertical-align: bottom;
-        }
-
-        .flag__body {
-            @extend [class~="span-1x"];
-        }
-
-            [class*="flag__sidebar"] img {
-                display: block;
-                max-width: none;
-            }
 }
 
 // Set Direction to reverse the layout of the pattern elements.
 
 @if ($flag-pattern-enable and $flag-pattern-reversed-enable) {
     .flag--rev {
-        @extend .flag;
+        @extend %flag;
         direction: rtl;
 
         * {
